# smart_db

./: .gitignore  .gitmodules  build.sc  postElaborating.py
proj/questasim/: u_cuckoo.udo  wave_cuckoo.do
proj/testbench/: tb_cuckoo.sv
smart_db/src/: BlockHandler.scala  CUCKOO.scala  CompositeMemory.scala  Defines.scala  LockHandler.scala  SMART_DB_TOP.scala  SmartDB.scala
smart_db/src/tmp/: HBM_TEST.scala
sw/data_generate/: CMakeLists.txt  bench.cpp  bench.hpp  bench_block_handler.cpp  bench_dual_mem.cpp  bench_simple.cpp  main.cpp
sw/data_generate/libhw/: CMakeLists.txt  common.cpp  common.hpp  hardware.cpp  hardware.hpp
